tests/tooling/fixtures/native/recovery/negative/negative_message_unterminated.objc3
// Negative fixture: unterminated bracketed message-send expression.
// Expected diagnostic code(s): O3P113.
module NegativeMessageUnterminated;

fn main() {
  let receiver = 1;
  return [receiver ping;
}
